test/tests/operators/each/parallel_invalid.txt
error: `parallel` must be at least 1
 --> tests/operators/each/parallel_invalid.tql:5:15
  |
5 | each parallel=0 {
  |               ^ 
  |
